--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ tests = [
 ]
 [tool.maturin]
 python-source = "python"
-features = ["pyo3/extension-module, python"]
+features = ["pyo3/extension-module", "python"]
